--- a/index.css
+++ b/index.css
@@ -96,3 +96,9 @@
     height: inherit;
     width: auto;
 }
+
+/**************************************************************/
+/************************* INSTAGRAM **************************/
+/**************************************************************/
+
+
