--- a/index.css
+++ b/index.css
@@ -8,6 +8,11 @@
     max-width: 1000px;
 }
 
+.card {
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
+    border-radius: 3px;
+}
+
 /**************************************************************/
 /*************************** HEADER ***************************/
 /**************************************************************/
@@ -62,7 +67,7 @@
     width: 100%;
     position: absolute;
     bottom: 0;
-    left: 0;
+    text-align: left;
     background: #cdf;
     background-color: rgb(200,200,200);
     background-repeat: no-repeat;
@@ -78,13 +83,15 @@
     width: 100px;
     position: absolute;
     list-style:none;
-    padding-top: 10px;
     float: right;
 }
 .main_footer > div > ul > li {
     padding-top: 20px;
     width: 100px;
     margin-left: 30px;
+}
+.main_footer > div > ul > li:first-child {
+    margin-top: 30px;
 }
 .main_footer > div > #logo {
     height:inherit;
