--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ main {
 }
 main>.instagram {
     /*detta tror jag är instaflow*/
-    height: 700px;;
-    overflow: scroll;
+    height: 700px;
+    
     float: left;
     width: 300px;
     margin-right:20px;
