--- a/main.css
+++ b/main.css
@@ -1,22 +1,57 @@
 body{
     margin: 0;
-    min-width: 386px;
+    background-color: aquamarine;
 }
 #slide{
-    position: absolute;
+    position: relative;
     background-color: bisque;
-    top: 4em;
+    padding-top: 4em;
     height: 11em;
     width: 100%;
 }
-#content{
-    position: absolute;
+main{
+    position: relative;
     width: 100%;
-    top: 15em;
     background-color: #E88;
-    max-width: 1200px;
     margin: auto;
 }
+.card.post{
+    font-family: helvetica, arial;
+    margin: auto;
+    min-width: 28em;
+    max-width: 40em;
+    padding: 1em 2em;
+    /*width: 44%;
+    float: left;*/
+}
+.card .container {
+    background-color: #FFF;
+}
+#heading{
+    display: none;
+}
+@media screen and (max-width:32em), screen and (min-width:48em){
+    .card.post{
+        padding: 0;
+        min-width: 20em;
+        border-bottom: solid 2px #BBB;
+    }
+}
+@media screen and (min-width:48em){
+    main{
+        max-width: 40em;
+        margin-top: 1em;
+    }
+    #heading{
+        display: block;
+    }
+}
+@media screen and (max-width:32em){
+    .card.post.before-voting{
+        border-bottom: none;
+    }
+}
+
 .card .info .img-container{
     position: relative;
     width: 5em;
@@ -28,11 +63,6 @@ body{
 }
 .img-container img{
     height: 100%;
-}
-.card{
-    font-family: helvetica, arial;
-    margin: 2em;
-    background-color: #FFF;
 }
 .card h2{
     margin: 0;
@@ -52,6 +82,7 @@ body{
 }
 summary{
     padding: 0 1em 1em 1em;
+    display: block;
 }
 #menu{
     position: fixed;
@@ -60,4 +91,23 @@ summary{
     width:100%;
     background-color: red;
     z-index: 99;
+}
+
+.card.voting{
+    background-color: #FFF;
+}
+.r-btn{
+    display:inline-block;
+    width:1em;
+    height:1em;
+    border-radius:1em;
+    background-color:white;
+    border: solid 1px #B99;
+}
+.radio-choice input{
+    display:none;
+}
+.radio-choice input:checked + label .r-btn{
+    background-color: #B99;
+    transition: background 0.2s ease;
 }
